@@ -762,7 +762,6 @@
           <compilerArgs>
             <arg>--add-modules</arg>
             <arg>jdk.incubator.vector</arg>
-            <arg>--enable-preview</arg>
             <arg>-Xpkginfo:always</arg>
             <arg>${extra.compiler.args}</arg>
           </compilerArgs>
@@ -790,7 +789,6 @@
             <compilerArgs>
               <arg>--add-modules</arg>
               <arg>jdk.incubator.vector</arg>
-              <arg>--enable-preview</arg>
               <arg>-Xpkginfo:always</arg>
               <arg>${extra.compiler.args}</arg>
             </compilerArgs>
